--- a/interaktivní mini-web/mini-web.html
+++ b/interaktivní mini-web/mini-web.html
@@ -17,7 +17,7 @@
         Obsah
     </h2>
     <button>
-        <a href="#úvod" target="_blank">Úvod </a>
+        <a href="#úvod" target="_self">Úvod </a>
     </button>
     <button>
         <a href="#o-mně" target="_self">O mně </a>
@@ -76,7 +76,7 @@
             <td></td>
         </tr>
         <tr>
-            <td>Streda</td>
+            <td>Středa</td>
             <td>LU</td>
             <td>ZPD</td>
             <td>EKO</td>
