--- a/interaktivní mini-web/mini-web-o-mně.html
+++ b/interaktivní mini-web/mini-web-o-mně.html
@@ -2,48 +2,33 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mini-web</title>
     <link rel="stylesheet" href="mini-web.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bitcount+Prop+Double+Ink:wght@100..900&display=swap" rel="stylesheet">
+    <title>O mně</title>
 </head>
 <body>
-    <h1 >
-        Interaktivní mini-web
-    </h1>
-    <h2>
-        Obsah
-    </h2>
-    <button>
-        <a href="#úvod" target="_self">Úvod </a>
-    </button>
-    <button>
-        <a href="#o-mně" target="_self">O mně </a>
-    </button>
-    <button>
-        <a href="#galerie" target="_self">Galerie </a>    
-    </button>
-    <button>
-        <a href="#kontakt" target="_self">Kontakt </a>
-    </button>
-    <h2 id="úvod">
-        Úvod
-    </h2>
-    <pre>
-        Tento projekt je vytvořen pro praxe v praxe.
-    </pre>
-    
-    <h2 id=o-mně>
+    <div id="odkazy">
+        <button>
+            <a href="mini-web-úvod.html" target="_self">Úvod </a>
+        </button>
+        <button>
+            <a href="mini-web-o-mně.html" target="_self">O mně </a>
+        </button>
+        <button>
+            <a href="mini-web-galerie.html" target="_self">Galerie </a>    
+        </button>
+        <button>
+            <a href="mini-web-kontakt.html" target="_self">Kontakt </a>
+        </button>
+    </div>
+    <h1 id=o-mně>
         O mně
-    </h2>
-    <h2 id="galerie">
-        Galerie
-    </h2>
-    <h2 id="kontakt">
-        Kontakt
-    </h2>
+    </h1>
+    <p>
+        Toto je můj rozvrh hodin
+    </p>
     <table border="1" cellpadding="10" cellspacing="0" align="center" width="90%">
         <tr>
             <th></th>
@@ -105,10 +90,6 @@
             <td>PRX</td>
             <td>PRX</td>
         </tr>
-        </tr>
     </table>
-    <button>
-        <a id="github" href="https://github.com/MatejStebel/praxe/tree/main/interaktivní%20mini-web" target="_blank">Odkaz na gihub s touto stránkou </a>
-    </button>
 </body>
 </html>
